# gym_tracker

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 06ab2a1063a8_create_user_model.py  20260118_120000_baseline_schema.py  99f7aeba0981_add_timezone.py  a4d495019431_workout_user_id_nullable.py
docs/: backend-user-auth-tasks.md  configuration.md  frontend-user-auth-tasks.md
docs/improvements/: improvement_tasks.md
docs/plans/: tasks.md
src/gym_tracker/: config.py
src/gym_tracker/adapters/: admin_queries.py  mappers.py  repositories.py  workouts_queries.py
src/gym_tracker/client/: workouts_views.py
src/gym_tracker/domain/: model.py
src/gym_tracker/domain/models/: __init__.py  exercise_metadata.py  exercise_set.py  full_exercise.py  metadata_secondary_muscle_group.py  muscle_group.py  user.py  workout.py
src/gym_tracker/entrypoints/: auth.py  dependencies.py  dtos.py  fastapi_app.py  search.py  workouts.py
src/gym_tracker/exercise_ingestor/: band-assisted-bench-press.txt  exercises_res.txt  extractor.py  temp_db.csv  transformer.py
src/gym_tracker/services/: workouts_services.py
static/css/: auth.css  read_workouts.css  style.css
static/js/: add_workout.js  api.js  auth.js  config.js  index.js  read_workouts.js
templates/: add_workouts.html  index.html  login.html  read_workouts.html  register.html
tests/: conftest.py
tests/integration/: conftest.py  test_database_url_guard.py  test_workouts_api.py  test_workouts_repository.py
tests/unit/: test_mappers.py  test_workout_domain.py
