[tool.poetry]
name = "gym-tracker"
version = "0.1.0"
description = ""
authors = ["Lokixin <dimasavilamartinez@gmail.com>"]
packages = [{ include = "gym_tracker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.10.0"
pendulum = "^3.0.0"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"



[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
