[tool.poetry]
name = "gym-tracker"
version = "0.1.0"
description = ""
authors = ["Lokixin <dimasavilamartinez@gmail.com>"]
packages = [{ include = "gym_tracker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.10.0"
pendulum = "^3.0.0"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
psycopg = "^3.1.19"
psycopg-binary = "^3.1.19"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
python-multipart = "^0.0.28"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
pyjwt = "^2.12.1"
email-validator = "^2.3.0"



[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
httpx = "^0.28.1"

[tool.ruff.lint.per-file-ignores]
"src/gym_tracker/domain/models/*" = ["F821"]

[tool.mypy]
exclude = [
    "src/gym_tracker/adapters/admin_queries.py",
    "src/gym_tracker/exercise_ingestor/.*",
]
ignore_missing_imports = true
disable_error_code = ["name-defined"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
